--- a/css/contact.css
+++ b/css/contact.css
@@ -1,26 +1,146 @@
-*{
+* {
     box-sizing: border-box;
 }
 
-body{
-    background: #481872;
-    color: black;
-    font-family: 'Roboto', sans-serif;
+.nav-item{
+font-weight: lighter;
 }
 
-.content{
+.nav-item:hover{
+    background-color: rgb(54, 54, 54);
+    border-radius: 5px;
+}
+
+body {
+    background: #481872;
+    color: #ffffff;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+}
+
+.content {
     max-width: 1170px;
     margin-left: auto;
     margin-right: auto;
     padding: 1.5em;
 }
 
-.logo{
+.logo {
     text-align: center;
     font-size: 3em;
 }
 
-.logo span{
+.logo span {
     color: #20a4fe;
 }
 
+.contact-wrapper {
+    box-shadow: 0 0 10px 0 #20a4fe;
+    border-radius: 15px;
+}
+
+.contact-wrapper>* {
+    padding: 1em;
+}
+
+.contact-form {
+    background: #9f35fe;
+    border-radius: 15px 15px 0px 0px;
+}
+
+.contact-form form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.contact-form form p {
+    margin: 0;
+    padding: 1em;
+}
+
+.contact-form form .block {
+    grid-column: 1/3;
+}
+
+
+
+.contact-form form button,
+.contact-form form input,
+.contact-form form textarea {
+    width: 100%;
+    padding: 0.7em;
+    border: none;
+    background: none;
+    outline: none;
+    color: rgb(202, 202, 202);
+    border-bottom: 1px solid rgb(202, 202, 202);
+}
+
+.contact-form form button {
+    background: #202020;
+    border: 0;
+    text-transform: uppercase;
+    font-weight: bold;
+    padding: 1em;
+    border-radius: 10px;
+}
+
+.contact-form form button:hover,
+.contact-form form button:focus {
+    background: #ffffff;
+    color: #202020;
+    transition: background-color 0.6s ease-out;
+    outline: 0;
+}
+
+.contact-info {
+    background: #361255;
+    border-radius: 0px 0px 15px 15px;
+    color: white;
+    font-weight: lighter;
+}
+
+.contact-info h4,
+.contact-info ul,
+.contact-info p {
+    text-align: center;
+    margin: 0 0 1rem 0;
+}
+
+
+
+.contact-info ul {
+    list-style: none;
+    padding: 0;
+}
+
+.contact-info ul il {
+    padding: 0.3em;
+}
+
+@media (min-width: 992px) {
+    .contact-wrapper {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+    }
+
+    .contact-wrapper>* {
+        padding: 2em;
+    }
+
+    .contact-info h4,
+    .contact-info ul,
+    .contact-info p {
+        padding: 1em;
+        text-align: left;
+    }
+
+    .contact-form {
+        border-radius: 15px 0px 0px 15px;
+    }
+
+    .contact-info {
+        border-radius: 0px 15px 15px 0px;
+    }
+
+}
